--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -5,6 +5,7 @@
   font-size: 1.6rem;
   padding: 9px 16px;
   font-weight: 700;
+  font-family: var(--font-family);
   border-radius: 4px;
   min-width: 100px;
   cursor: pointer;
