--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -1,15 +1,15 @@
 @import "normalize.css";
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap");
-
 :root {
   --primary: #fe2c55;
   --black: #000;
-  --text-color: #333;
+  --text-color: #161823;
   --white: #fff;
 
+  --font-family: "TikTokFont", sans-serif;
   --default-layout-header-height: 60px;
   --default-layout-width: 1150px;
+  --default-layout-horizontal-spacer: 24px;
 }
 
 * {
@@ -23,7 +23,7 @@ html {
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: var(--font-family);
   font-size: 1.6rem;
   line-height: 1.5;
   text-rendering: optimizeSpeed;
@@ -40,4 +40,46 @@ input,
 a[href] {
   color: var(--text-color);
   text-decoration: none;
+}
+
+@font-face {
+  font-family: TikTokFont;
+  src: url("/assets/fonts/TikTokFont-Regular.woff2");
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: TikTokFont;
+  src: url("/assets/fonts/TikTokFont-Semibold.woff2");
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: TikTokFont;
+  src: url("/assets/fonts/TikTokFont-Bold.woff2");
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: TikTokFont;
+  src: url("/assets/fonts/TikTokDisplayFont-Bold.woff2");
+  font-weight: 700;
+}
+
+body {
+  .tippy-box {
+    border-radius: 8px;
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 2.2rem;
+    background-color: rgba(84, 84, 84, 0.92);
+  }
+
+  .tippy-arrow {
+    color: rgba(84, 84, 84, 0.92);
+  }
+
+  .tippy-content {
+    padding: 8px 9px;
+  }
 }
