--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -32,28 +32,13 @@ body {
 }
 
 html *::-webkit-scrollbar {
-  border-radius: 0px;
-  width: 8px;
-}
-
-html *::-webkit-scrollbar {
   border-radius: 0;
   width: 8px;
-}
-
-html ::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background-color: rgba(255, 255, 255, 0.08);
 }
 
 html *::-webkit-scrollbar-thumb {
   border-radius: 4px;
   background-color: rgba(255, 255, 255, 0.08);
-}
-
-html ::-webkit-scrollbar-track {
-  border-radius: 0px;
-  background-color: rgba(0, 0, 0, 0);
 }
 
 html *::-webkit-scrollbar-track {
@@ -68,7 +53,7 @@ input,
   border: none;
 }
 
-a[href] {
+a {
   color: var(--text-color);
   text-decoration: none;
 }
